Closed
Bug 102446
Opened 24 years ago
Closed 24 years ago
nsXlibWindowServiceFactory.cpp build failure
Categories
(Core :: XUL, defect)
Tracking
()
VERIFIED
FIXED
People
(Reporter: roland.mainz, Assigned: roland.mainz)
Details
Attachments
(1 file)
|
628 bytes,
patch
|
Details | Diff | Splinter Review |
2001-09-28-08-trunk Sun Workshop 6 U2 build with --enable-toolkit=xlib:
Xlib tookit does not compile anymore, build stops in
nsXlibWindowServiceFactory.cpp with the following error:
-- snip --
gmake[3]: Entering directory
`/home/mozilla/builds/2001-09-28-08-trunk/objdir_ws6_xlib/widget/src/xlib/window_service'
nsXlibWindowServiceFactory.cpp
Building deps for
../../../../../../../src/2001-09-28-08-trunk/mozilla/widget/src/xlib/window_service/nsXlibWindowServiceFactory.cpp
/opt/SUNWspro/bin/CC -o nsXlibWindowServiceFactory.o -c -DOSTYPE=\"SunOS5\"
-DOSARCH=\"SunOS\" -DMOZ_REFLOW_PERF -DMOZ_REFLOW_PERF_DSP -DOJI
-D_IMPL_NS_TIMER -I../../../../dist/include/xpcom
-I../../../../dist/include/widget -I../../../../dist/include
-I/home/mozilla/builds/2001-09-28-08-trunk/objdir_ws6_xlib/dist/include/nspr
-I/usr/openwin/include
-I../../../../../../../src/2001-09-28-08-trunk/mozilla/widget/src/xlib/window_service/..
-I../../../../../../../src/2001-09-28-08-trunk/mozilla/widget/src/xlib/window_service/../../xpwidgets
-I/usr/openwin/include -KPIC -I/usr/openwin/include -mt -O -DDEBUG
-DDEBUG_mozilla -DTRACING -g -I/usr/openwin/include -I/usr/openwin/include
-DMOZILLA_CLIENT -DBROKEN_QSORT=1 -DNSCAP_DISABLE_DEBUG_PTR_TYPES=1
-DD_INO=d_ino -DMOZ_WIDGET_XLIB=1 -DMOZ_ENABLE_XREMOTE=1
-DMOZ_DEFAULT_TOOLKIT=\"xlib\" -DMOZ_X11=1 -DSTDC_HEADERS=1 -DHAVE_ST_BLKSIZE=1
-DHAVE_INT16_T=1 -DHAVE_INT32_T=1 -DHAVE_INT64_T=1 -DHAVE_UINT=1 -DHAVE_UINT_T=1
-DHAVE_UINT16_T=1 -DHAVE_DIRENT_H=1 -DHAVE_SYS_BYTEORDER_H=1 -DHAVE_MEMORY_H=1
-DHAVE_UNISTD_H=1 -DHAVE_NL_TYPES_H=1 -DHAVE_SYS_STATVFS_H=1
-DHAVE_SYS_STATFS_H=1 -DHAVE_SYS_VFS_H=1 -DHAVE_SYS_MOUNT_H=1 -DHAVE_LIBM=1
-DHAVE_LIBDL=1 -DHAVE_LIBSOCKET=1 -D_REENTRANT=1 -DHAVE_RANDOM=1
-DHAVE_STRERROR=1 -DHAVE_LCHOWN=1 -DHAVE_FCHMOD=1 -DHAVE_SNPRINTF=1
-DHAVE_LOCALTIME_R=1 -DHAVE_STATVFS=1 -DHAVE_MEMMOVE=1 -DHAVE_RINT=1
-DHAVE_NL_LANGINFO=1 -DHAVE_STRTOK_R=1 -DHAVE_IOS_BINARY=1 -DHAVE_CPP_EXPLICIT=1
-DHAVE_CPP_SPECIALIZATION=1 -DHAVE_CPP_MODERN_SPECIALIZE_TEMPLATE_SYNTAX=1
-DHAVE_CPP_PARTIAL_SPECIALIZATION=1 -DHAVE_CPP_ACCESS_CHANGING_USING=1
-DHAVE_CPP_AMBIGUITY_RESOLVING_USING=1 -DHAVE_CPP_NAMESPACE_STD=1
-DHAVE_CPP_UNAMBIGUOUS_STD_NOTEQUAL=1 -DHAVE_CPP_NEW_CASTS=1
-DHAVE_CPP_DYNAMIC_CAST_TO_VOID_PTR=1 -DNEED_CPP_UNUSED_IMPLEMENTATIONS=1
-DHAVE_I18N_LC_MESSAGES=1 -DMOZ_LOGGING=1 -DMOZ_ENDER_LITE=1 -DNS_MT_SUPPORTED=1
-DIBMBIDI=1 -DSUNCTL=1 -DACCESSIBILITY=1 -DDETECT_WEBSHELL_LEAKS=1
-DMOZ_USER_DIR=\".mozilla\" -DMOZ_XUL=1 -DINCLUDE_XUL=1 -DMOZ_MATHML=1
-DMOZ_SVG=1 -DUSE_IMG2=1 -DMOZ_DLL_SUFFIX=\".so\" -DXP_UNIX=1 -DUNIX_ASYNC_DNS=1
-DJS_THREADSAFE=1
../../../../../../../src/2001-09-28-08-trunk/mozilla/widget/src/xlib/window_service/nsXlibWindowServiceFactory.cpp
"../../../../../../../src/2001-09-28-08-trunk/mozilla/widget/src/xlib/window_service/nsXlibWindowServiceFactory.cpp",
line 64: Error: Unexpected type name "nsXlibWindowServiceFactory" encountered.
"../../../../../../../src/2001-09-28-08-trunk/mozilla/widget/src/xlib/window_service/nsXlibWindowServiceFactory.cpp",
line 67: Error: Unexpected type name "nsresult" encountered.
"../../../../../../../src/2001-09-28-08-trunk/mozilla/widget/src/xlib/window_service/nsXlibWindowServiceFactory.cpp",
line 67: Error: Unexpected type name "nsISupports" encountered.
"../../../../../../../src/2001-09-28-08-trunk/mozilla/widget/src/xlib/window_service/nsXlibWindowServiceFactory.cpp",
line 67: Error: aOuter is not defined.
"../../../../../../../src/2001-09-28-08-trunk/mozilla/widget/src/xlib/window_service/nsXlibWindowServiceFactory.cpp",
line 68: Error: Expected an expression.
"../../../../../../../src/2001-09-28-08-trunk/mozilla/widget/src/xlib/window_service/nsXlibWindowServiceFactory.cpp",
line 69: Error: "," expected instead of ")".
"../../../../../../../src/2001-09-28-08-trunk/mozilla/widget/src/xlib/window_service/nsXlibWindowServiceFactory.cpp",
line 74: Error: Multiple declaration for aResult.
"../../../../../../../src/2001-09-28-08-trunk/mozilla/widget/src/xlib/window_service/nsXlibWindowServiceFactory.cpp",
line 77: Error: A declaration was expected instead of "if".
"../../../../../../../src/2001-09-28-08-trunk/mozilla/widget/src/xlib/window_service/nsXlibWindowServiceFactory.cpp",
line 77: Error: ")" expected instead of ".".
"../../../../../../../src/2001-09-28-08-trunk/mozilla/widget/src/xlib/window_service/nsXlibWindowServiceFactory.cpp",
line 81: Error: ")" expected instead of "==".
"../../../../../../../src/2001-09-28-08-trunk/mozilla/widget/src/xlib/window_service/nsXlibWindowServiceFactory.cpp",
line 84: Error: aIID is not defined.
"../../../../../../../src/2001-09-28-08-trunk/mozilla/widget/src/xlib/window_service/nsXlibWindowServiceFactory.cpp",
line 84: Error: Formal argument aIID of type const nsID& in call to
nsISupports::QueryInterface(const nsID&, void**) is being passed int.
"../../../../../../../src/2001-09-28-08-trunk/mozilla/widget/src/xlib/window_service/nsXlibWindowServiceFactory.cpp",
line 85: Error: A declaration was expected instead of "if".
"../../../../../../../src/2001-09-28-08-trunk/mozilla/widget/src/xlib/window_service/nsXlibWindowServiceFactory.cpp",
line 85: Error: ")" expected instead of "!=".
"../../../../../../../src/2001-09-28-08-trunk/mozilla/widget/src/xlib/window_service/nsXlibWindowServiceFactory.cpp",
line 87: Error: Multiple declaration for rv.
"../../../../../../../src/2001-09-28-08-trunk/mozilla/widget/src/xlib/window_service/nsXlibWindowServiceFactory.cpp",
line 88: Error: A declaration was expected instead of "}".
16 Error(s) detected.
gmake[3]: *** [nsXlibWindowServiceFactory.o] Error 16
gmake[3]: Leaving directory
`/home/mozilla/builds/2001-09-28-08-trunk/objdir_ws6_xlib/widget/src/xlib/window_service'
gmake[2]: *** [install] Error 2
gmake[2]: Leaving directory
`/home/mozilla/builds/2001-09-28-08-trunk/objdir_ws6_xlib/widget/src/xlib'
gmake[1]: *** [install] Error 2
gmake[1]: Leaving directory
`/home/mozilla/builds/2001-09-28-08-trunk/objdir_ws6_xlib/widget/src'
gmake: *** [install] Error 2
-- snip --
| Assignee | ||
Comment 2•24 years ago
|
||
| Assignee | ||
Comment 3•24 years ago
|
||
cls:
Could you r= this patch and check it in, please ?
Comment 4•24 years ago
|
||
r=cls
Comment 5•24 years ago
|
||
Checked in.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
| Assignee | ||
Comment 6•24 years ago
|
||
Taking QA... will verify with my next build (2-3 days) ...
QA Contact: jrgm → Roland.Mainz
| Assignee | ||
Comment 7•24 years ago
|
||
Verifying (tested with Linux x86 gcc + Solaris SPARC WS6U2).
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•