More NS_IMPLE_THREADSAFE_ISUPPORTS cleanup. Thanks to Roland Mainz <Roland.Mainz@informatik.med.uni-giessen.de> for the patch. Bug #102446 r=cls